--- a/.env
+++ b/.env
@@ -10,3 +10,14 @@
 # npx prisma db push
 
 DATABASE_URL="mongodb+srv://vnfindjob:Kien876346@cluster0.yshwpmx.mongodb.net/db"
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=ddjctqh9z
+NEXT_PUBLIC_CLOUDINARY_API_KEY=251972248998136
+NEXT_PUBLIC_CLOUDINARY_API_SECRET=2lfgQYTbAJvUeTFIhzT8Dtt8Kyo
+NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET=testforproject
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_ZHJpdmluZy1zaHJldy0wLmNsZXJrLmFjY291bnRzLmRldiQ
+CLERK_SECRET_KEY=sk_test_6xvVJq4UluSQNXPu62EhfyVojTZOJiRepCIkOTq7cr
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
+NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
