--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.23.2",
     "@prisma/client": "^5.2.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.5.3",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -27,7 +28,7 @@
     "prisma": "^5.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-responsive-carousel": "^3.2.23",
+    "redux": "^4.2.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
