--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
-  "name": "blogapp",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@clerk/nextjs": "^4.23.2",
-    "@prisma/client": "^5.2.0",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@types/node": "20.5.3",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
-    "axios": "^1.4.0",
-    "bson": "^5.4.0",
-    "bson-objectid": "^2.0.4",
-    "classnames": "^2.3.2",
-    "eslint": "8.47.0",
-    "eslint-config-next": "13.4.19",
-    "lucide-react": "^0.268.0",
-    "next": "13.4.19",
-    "next-intl": "^2.20.0",
-    "postcss": "8.4.28",
-    "prisma": "^5.2.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "redux": "^4.2.1",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
-  }
+	"name": "blogapp",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "prisma generate && next build",
+		"start": "next start",
+		"lint": "next lint",
+		"postinstall": "prisma generate"
+	},
+	"dependencies": {
+		"@clerk/nextjs": "^4.23.2",
+		"@prisma/client": "^5.2.0",
+		"@reduxjs/toolkit": "^1.9.5",
+		"@types/node": "20.5.3",
+		"@types/react": "18.2.21",
+		"@types/react-dom": "18.2.7",
+		"autoprefixer": "10.4.15",
+		"axios": "^1.4.0",
+		"bson": "^5.4.0",
+		"bson-objectid": "^2.0.4",
+		"classnames": "^2.3.2",
+		"eslint": "8.47.0",
+		"eslint-config-next": "13.4.19",
+		"lucide-react": "^0.268.0",
+		"next": "13.4.19",
+		"next-intl": "^2.20.0",
+		"postcss": "8.4.28",
+		"prisma": "^5.2.0",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"redux": "^4.2.1",
+		"tailwindcss": "3.3.3",
+		"typescript": "5.1.6"
+	}
 }
